--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+pycryptodome
 Django
 django-allauth
 django-rest-auth
 djangorestframework
-djangorestframework-stubs
+djangorestframework_jwt
 Jinja2
-mysql-connector
 mysqlclient
 uwsgi
 request
 requests
 urllib3
 mongoengine
+django-rest-framework-mongoengine
+pytesseract
+numpy
+Pillow
+opencv-python
